[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/BannerControl.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Ball.png" type="Texture" id=2]
[ext_resource path="res://GROBOLD.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/Ball-white.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]

size = 20
font_data = ExtResource( 3 )

[node name="BannerControl" type="Control"]
margin_left = 140.0
margin_top = 400.0
margin_right = 840.0
margin_bottom = 500.0
script = ExtResource( 1 )

[node name="PlayerOneControl" type="Control" parent="."]
margin_bottom = 100.0

[node name="SpriteOne" type="TextureRect" parent="PlayerOneControl"]
margin_top = 10.0
margin_right = 100.0
margin_bottom = 70.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="PlayerLabel" type="Label" parent="PlayerOneControl"]
margin_left = 100.0
margin_top = 20.0
margin_right = 100.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "PLAYER ONE"

[node name="LifeCounter" type="Control" parent="PlayerOneControl"]
margin_left = 100.0
margin_top = 50.0
margin_right = 100.0
margin_bottom = 105.0

[node name="TextureRect" type="TextureRect" parent="PlayerOneControl/LifeCounter"]
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="PlayerOneControl/LifeCounter"]
margin_left = 22.0
margin_right = 42.0
margin_bottom = 20.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="TextureRect3" type="TextureRect" parent="PlayerOneControl/LifeCounter"]
margin_left = 44.0
margin_right = 64.0
margin_bottom = 20.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="PlayerTwoControl" type="Control" parent="."]
margin_left = 400.0
margin_right = 1100.0
margin_bottom = 100.0

[node name="SpriteTwo" type="TextureRect" parent="PlayerTwoControl"]
margin_top = 10.0
margin_right = 100.0
margin_bottom = 70.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="PlayerLabel" type="Label" parent="PlayerTwoControl"]
margin_left = 100.0
margin_top = 25.0
margin_right = 100.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "PLAYER TWO"

[node name="LifeCounter2" type="Control" parent="PlayerTwoControl"]
margin_left = 100.0
margin_top = 50.0
margin_right = 100.0
margin_bottom = 105.0

[node name="TextureRect" type="TextureRect" parent="PlayerTwoControl/LifeCounter2"]
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="PlayerTwoControl/LifeCounter2"]
margin_left = 22.0
margin_right = 42.0
margin_bottom = 20.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 1

[node name="TextureRect3" type="TextureRect" parent="PlayerTwoControl/LifeCounter2"]
margin_left = 44.0
margin_right = 64.0
margin_bottom = 20.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 1

